--- a/src/css/style.css
+++ b/src/css/style.css
@@ -232,15 +232,6 @@ nav.scroll {
   font-size: 2.5rem;
   color: #fff;
 }
-.caro12 {
-  height: 100px;
-  width: 100%;
-  background: url("../img/collection2.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
 .b1 img,
 .c1 img {
   margin-bottom: 0 !important;
@@ -459,6 +450,10 @@ nav.scroll {
     color: #000;
     font-size: 16px;
     padding-right: 12px;
+  }
+  .discoverr {
+    padding-top: 2.5rem !important;
+    padding-bottom: 2.5rem !important;
   }
 }
 
