hero changes vh

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,7 +13,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 50vh;
+  height: 100vh;
 }
 .btn:focus {
   box-shadow: none !important;
@@ -476,8 +476,9 @@ nav.scroll {
     padding-right: 12px;
   }
   .discoverr {
-    padding-top: 2.5rem !important;
-    padding-bottom: 2.5rem !important;
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+    font-size: 18px !important;
   }
 }
 
