--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,6 +27,7 @@ html,
   background-position: center;
   background-size: cover;
   height: 100vh;
+  background-attachment: fixed;
 }
 .navbar-brand {
   font-size: 26px;
