--- a/src/css/style.css
+++ b/src/css/style.css
@@ -111,7 +111,7 @@ button {
 .contact-below a {
   /* margin: 0; */
   font-weight: 500;
-  font-size: 12px;
+  font-size: 10px;
   line-height: 15px;
   color: #000;
 }
@@ -124,9 +124,9 @@ nav.scroll {
   top: 0;
   bottom: 0;
   right: 0;
-  font-size: 0.8rem;
+  font-size: 11px;
   border-bottom: 1px solid #bb9c36 !important;
-
+  padding-left: 5px !important;
   border-radius: 0;
 }
 .form-control:focus {
@@ -142,7 +142,7 @@ nav.scroll {
   top: 0;
   bottom: 0;
   right: 0;
-  font-size: 0.8rem;
+  font-size: 11px;
   border-bottom: 1px solid #bb9c36 !important;
 }
 .contact-below .sign-up button:hover {
